@@ -440,32 +440,6 @@
         <number>6</number>
        </property>
        <item>
-        <widget class="QCheckBox" name="single_instance_check" >
-         <property name="text" >
-          <string>&amp;Use only one running instance of SMPlayer</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QLabel" name="port_label" >
-         <property name="enabled" >
-          <bool>false</bool>
-         </property>
-         <property name="text" >
-          <string>SMPlayer will listen to this &amp;port to receive commands from other instances:</string>
-         </property>
-         <property name="alignment" >
-          <set>Qt::AlignVCenter</set>
-         </property>
-         <property name="wordWrap" >
-          <bool>true</bool>
-         </property>
-         <property name="buddy" >
-          <cstring>server_port_spin</cstring>
-         </property>
-        </widget>
-       </item>
-       <item>
         <layout class="QHBoxLayout" >
          <property name="margin" >
           <number>0</number>
@@ -474,46 +448,99 @@
           <number>6</number>
          </property>
          <item>
-          <spacer>
-           <property name="orientation" >
-            <enum>Qt::Horizontal</enum>
-           </property>
-           <property name="sizeType" >
-            <enum>QSizePolicy::Fixed</enum>
-           </property>
-           <property name="sizeHint" >
-            <size>
-             <width>61</width>
-             <height>31</height>
-            </size>
-           </property>
-          </spacer>
-         </item>
-         <item>
-          <widget class="QSpinBox" name="server_port_spin" >
-           <property name="enabled" >
-            <bool>false</bool>
-           </property>
-           <property name="maximum" >
-            <number>10000</number>
+          <widget class="QLabel" name="instances_icon" >
+           <property name="text" >
+            <string>TextLabel</string>
            </property>
           </widget>
          </item>
          <item>
-          <spacer>
-           <property name="orientation" >
-            <enum>Qt::Horizontal</enum>
+          <layout class="QVBoxLayout" >
+           <property name="margin" >
+            <number>0</number>
            </property>
-           <property name="sizeType" >
-            <enum>QSizePolicy::Expanding</enum>
+           <property name="spacing" >
+            <number>6</number>
            </property>
-           <property name="sizeHint" >
-            <size>
-             <width>270</width>
-             <height>31</height>
-            </size>
-           </property>
-          </spacer>
+           <item>
+            <widget class="QCheckBox" name="single_instance_check" >
+             <property name="text" >
+              <string>&amp;Use only one running instance of SMPlayer</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="port_label" >
+             <property name="enabled" >
+              <bool>false</bool>
+             </property>
+             <property name="text" >
+              <string>SMPlayer will listen to this &amp;port to receive commands from other instances:</string>
+             </property>
+             <property name="alignment" >
+              <set>Qt::AlignVCenter</set>
+             </property>
+             <property name="wordWrap" >
+              <bool>true</bool>
+             </property>
+             <property name="buddy" >
+              <cstring>server_port_spin</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <layout class="QHBoxLayout" >
+             <property name="margin" >
+              <number>0</number>
+             </property>
+             <property name="spacing" >
+              <number>6</number>
+             </property>
+             <item>
+              <spacer>
+               <property name="orientation" >
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeType" >
+                <enum>QSizePolicy::Fixed</enum>
+               </property>
+               <property name="sizeHint" >
+                <size>
+                 <width>61</width>
+                 <height>31</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+             <item>
+              <widget class="QSpinBox" name="server_port_spin" >
+               <property name="enabled" >
+                <bool>false</bool>
+               </property>
+               <property name="maximum" >
+                <number>10000</number>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <spacer>
+               <property name="orientation" >
+                <enum>Qt::Horizontal</enum>
+               </property>
+               <property name="sizeType" >
+                <enum>QSizePolicy::Expanding</enum>
+               </property>
+               <property name="sizeHint" >
+                <size>
+                 <width>270</width>
+                 <height>31</height>
+                </size>
+               </property>
+              </spacer>
+             </item>
+            </layout>
+           </item>
+          </layout>
          </item>
         </layout>
        </item>
