@@ -1,5 +1,8 @@
 [b]Version 0.6.0rc1 (not released yet)[/b]:
 
+(2008-01-10)
+ * Added an icon in the Instances tab so it doesn't look so empty.
+
 (2008-01-09)
  * Added the possibility to update the position of video while
    dragging the time slider (instead of updating it only when the
